--- a/cardGame.html
+++ b/cardGame.html
@@ -11,70 +11,71 @@
     <fieldset id="cardSet">
       <legend>Memory Game</legend>
       <div class="cardSpot">
-        <div class="card cardFront" id="card1F"></div> 
-        <div class="card cardBack" id="card1B"></div> 
+        <div class="card cardFront position1" id="card1"></div> 
+        <div class="card cardBack position2" id="card2"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card2F"></div> 
-        <div class="card cardBack" id="card2B"></div> 
+        <div class="card cardFront position3" id="card3"></div> 
+        <div class="card cardBack position4" id="card4"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card3F"></div> 
-        <div class="card cardBack" id="card3B"></div> 
+        <div class="card cardFront position5" id="card5"></div> 
+        <div class="card cardBack position6" id="card6"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card4F"></div> 
-        <div class="card cardBack" id="card4B"></div> 
+        <div class="card cardFront position7" id="card7"></div> 
+        <div class="card cardBack position8" id="card8"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card5F"></div> 
-        <div class="card cardBack" id="card5B"></div> 
+        <div class="card cardFront position9" id="card9"></div> 
+        <div class="card cardBack position10" id="card10"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card6F"></div> 
-        <div class="card cardBack" id="card6B"></div> 
+        <div class="card cardFront position11" id="card11"></div> 
+        <div class="card cardBack position12" id="card12"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card7F"></div> 
-        <div class="card cardBack" id="card7B"></div> 
+        <div class="card cardFront position13" id="card13"></div> 
+        <div class="card cardBack position14" id="card14"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card8F"></div> 
-        <div class="card cardBack" id="card8B"></div> 
+        <div class="card cardFront position15" id="card15"></div> 
+        <div class="card cardBack position16" id="card16"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card9F"></div> 
-        <div class="card cardBack" id="card9B"></div> 
+        <div class="card cardFront position17" id="card17"></div> 
+        <div class="card cardBack position18" id="card18"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card10F"></div> 
-        <div class="card cardBack" id="card10B"></div> 
+        <div class="card cardFront position19" id="card19"></div> 
+        <div class="card cardBack position20" id="card20"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card11F"></div> 
-        <div class="card cardBack" id="card11B"></div> 
+        <div class="card cardFront position21" id="card21"></div> 
+        <div class="card cardBack position22" id="card22"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card12F"></div> 
-        <div class="card cardBack" id="card12B"></div> 
+        <div class="card cardFront position23" id="card23"></div> 
+        <div class="card cardBack position24" id="card24"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card13F"></div> 
-        <div class="card cardBack" id="card13B"></div> 
+        <div class="card cardFront position25" id="card25"></div> 
+        <div class="card cardBack position26" id="card26"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card14F"></div> 
-        <div class="card cardBack" id="card14B"></div> 
+        <div class="card cardFront position27" id="card27"></div> 
+        <div class="card cardBack position28" id="card28"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card15F"></div> 
-        <div class="card cardBack" id="card15B"></div> 
+        <div class="card cardFront position29" id="card29"></div> 
+        <div class="card cardBack position30" id="card30"></div> 
       </div>
       <div class="cardSpot">
-        <div class="card cardFront" id="card16F"></div> 
-        <div class="card cardBack" id="card16B"></div> 
+        <div class="card cardFront position31" id="card31"></div> 
+        <div class="card cardBack position32" id="card32"></div> 
       </div>
     </fieldset>
+    <button id="cardStart">Click Me</button>
       <script src="scripts/cardGame.js"></script>
 </body>
 </html>
@@ -87,13 +88,13 @@
     <div class="card__face card__face--back">back</div>
   </div>
 </div>
-      <div class="card cardFront" id="card2"></div>
-      <div class="card cardFront" id="card3"></div>
-      <div class="card cardFront" id="card4"></div>
-      <div class="card cardFront" id="card5"></div>
-      <div class="card cardFront" id="card6"></div>
-      <div class="card cardFront" id="card7"></div>
-      <div class="card cardFront" id="card8"></div>
-      <div class="card cardFront" id="card9"></div>
-      <div class="card cardFront" id="card10"></div>
+      <div class="card cardFront position1" id="card2"></div>
+      <div class="card cardFront position1" id="card3"></div>
+      <div class="card cardFront position1" id="card4"></div>
+      <div class="card cardFront position1" id="card5"></div>
+      <div class="card cardFront position1" id="card6"></div>
+      <div class="card cardFront position1" id="card7"></div>
+      <div class="card cardFront position1" id="card8"></div>
+      <div class="card cardFront position1" id="card9"></div>
+      <div class="card cardFront position1" id="card10"></div>
 -->
